updated skills section page

--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,65 @@
   <title>Document</title>
 </head>
 <body>
-  <section class="about section">
-    <h2 class="section__title">About Me</h2>
-    <span class="section__subtitle">My Introduction</span>
-    <div class="about__container container grid">
-      <img src="./assets/profile.jpg" alt="" class="about__img">
-      <div class="about__data">
-        <p class="about__description">
-
-        </p>
-        <div class="about__info">
+  <section class="skills section" id="skills">
+    <h2 class="section__title">Skills</h2>
+    <span class="section__subtitle">My technical level</span>
+    <div class="skills__container container grid">
+      <div class="skills__content">
+        <div class="skills__header">
+          <i class="bi bi-braces"></i>
           <div>
-            <span class="about__info-title">2</span>
-            <span class="about__info-name">Project<br/>done</span>
+            <h1 class="skills__title">Frontend Developer</h1>
+            <span class="skills__subtitle">Certified as Junior Frontend Developer</span>
+          </div>
+
+        </div>
+
+        <div class="skills__list grid">
+          <div class="skilss__data">
+            <div class="skills__title">
+              <h3 class="skills__name">HTML</h3>
+              <span class="skills__number">90%</span>
+            </div>
+            <div class="skills__bar">
+              <span class="skills__precentage skills__html"></span>
+            </div>
+          </div>
+        </div>
+        <div class="skills__list grid">
+          <div class="skilss__data">
+            <div class="skills__title">
+              <h3 class="skills__name">CSS</h3>
+              <span class="skills__number">80%</span>
+            </div>
+            <div class="skills__bar">
+              <span class="skills__precentage skills__css"></span>
+            </div>
+          </div>
+        </div>
+        <div class="skills__list grid">
+          <div class="skilss__data">
+            <div class="skills__title">
+              <h3 class="skills__name">JavaScript</h3>
+              <span class="skills__number">70%</span>
+            </div>
+            <div class="skills__bar">
+              <span class="skills__precentage skills__js"></span>
+            </div>
+          </div>
+        </div>
+        <div class="skills__list grid">
+          <div class="skilss__data">
+            <div class="skills__title">
+              <h3 class="skills__name">React</h3>
+              <span class="skills__number">80%</span>
+            </div>
+            <div class="skills__bar">
+              <span class="skills__precentage skills__react"></span>
+            </div>
           </div>
         </div>
 
-        <div class="about__buttons">
-          <a download="" href="./assets/resume-rantika.pdf" class="button button--flex">
-            Download Resume<i class="bi bi-download button__icon"></i>
-          </a>
-        </div>
       </div>
     </div>
   </section>
