--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,45 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="qualification__sections">
+    <div class="qualification__content">
 
+      <div class="qualification__data">
+        <div>
+          <h3 class="qualification__title">Frontend Development</h3>
+          <span class="qualification__subtitle">Glints Academy x Binar Academy</span>
+          <div class="qualification__calendar">
+            <i class="uil uil-schedule"></i>
+            2020 - 2021
+          </div>
+        </div>
+
+        <div>
+          <span class="qualification__rounder"></span>
+          <span class="qualification__line"></span>
+        </div>
+      </div>
+
+      <div class="qualification__data">
+        <div></div>
+        <div>
+          <span class="qualification__rounder"></span>
+          <span class="qualification__line"></span>
+        </div>
+
+        <div>
+          <h3 class="qualification__title">Hotel Management</h3>
+          <span class="qualification__subtitle">International Hotel Management School</span>
+          <div class="qualification__calendar">
+            <i class="uil uil-schedule"></i>
+            2016 - 2019
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
   
   
 </body>
